--- a/src/components/create-look/client-wardrobe-box/client-wardrobe-box.module.scss
+++ b/src/components/create-look/client-wardrobe-box/client-wardrobe-box.module.scss
@@ -7,6 +7,7 @@
 
         span{
             font-size: 0.9rem;
+            text-transform: uppercase;
             margin-left: 5px;
             font-weight: 500;
             color: #000000;
@@ -27,6 +28,11 @@
             margin: 5px;
             border-radius: 10px;
             border: 1px solid #d4d4d4;
+            overflow: hidden;
+
+            img {
+                width: 100%;
+            }
         }
     }
 }
