--- a/src/containers/create-look/create-look.module.scss
+++ b/src/containers/create-look/create-look.module.scss
@@ -49,6 +49,9 @@
                 justify-content: flex-start;
 
                 border: 1px solid #707070;
+
+                overflow-x: hidden;
+                overflow-y: auto;
             }
         }
     }
