--- a/src/components/create-look/stylist-editor-box/stylist-editor-box.module.scss
+++ b/src/components/create-look/stylist-editor-box/stylist-editor-box.module.scss
@@ -59,43 +59,71 @@
         width: 420px;
         height: 604px;
         position: relative;
+        border: 1px solid red;
 
         background-size: contain;
 
         .size-rotation-controller {
-            width: 20px;
+            width: 100%;
             height: 50px;
+            padding: 5px 10px;
 
-            display: none;
+            display: flex;
             flex-direction: column;
             justify-content: space-between;
 
             position: absolute;
-            z-index: 1000;
+            top: -50px;
+            z-index: 1001;
 
             .size-controller-btn{
-                width: 20px;
+                width: 100%;
                 height: 20px;
-                border-radius: 50%;
-                background-color: #FF5A5F;
                 padding: 5px;
 
                 display: flex;
-                flex-direction: column;
-                justify-content: center;
+                flex-direction: row;
+                justify-content: space-between;
                 align-items: center;
+
+                input{
+                    flex: 1;
+                    
+                }
+                label {
+                    width: 100px;
+                    font-size: 0.8rem;
+                    margin-left: 5px;
+                    font-weight: bold;
+                    color: #FF5A5F;
+                }
             }
             .rotation-controller-btn{
-                width: 20px;
+                width: 100%;
                 height: 20px;
-                border-radius: 50%;
-                background-color: #FF5A5F;
                 padding: 5px;
 
                 display: flex;
-                flex-direction: column;
-                justify-content: center;
+                flex-direction: row;
+                justify-content: space-between;
                 align-items: center;
+
+
+                input{
+                    flex: 1;
+
+                    &::-webkit-slider-thumb {
+                        -webkit-appearance: none;
+                        background: #FF5A5F;
+                    }
+                }
+                label {
+                    width: 100px;
+                    font-size: 0.8rem;
+                    margin-left: 5px;
+                    font-weight: bold;
+                    color: #FF5A5F;
+                }
             }
         }
     }
