--- a/src/components/create-look/stylist-editor-box/stylist-editor-box.module.scss
+++ b/src/components/create-look/stylist-editor-box/stylist-editor-box.module.scss
@@ -59,7 +59,7 @@
         width: 420px;
         height: 604px;
         position: relative;
-        border: 1px solid red;
+        // border: 1px solid red;
 
         background-size: contain;
 
