--- a/src/containers/create-look/create-look.module.scss
+++ b/src/containers/create-look/create-look.module.scss
@@ -48,7 +48,7 @@
                 flex-direction: column;
                 justify-content: flex-start;
 
-                border: 1px solid #707070;
+                border-left: 1px solid rgba( #707070 , 0.5 );
 
                 overflow-x: hidden;
                 overflow-y: auto;
